--- a/web_project_3/blocks/page/page.css
+++ b/web_project_3/blocks/page/page.css
@@ -7,26 +7,22 @@
     margin: 0 auto;
     padding: 0;
     color: white;
-    width: 100%;
 }
 
 @media screen and (max-width: 1024px){
     .page{
         max-width: 1024px;
-        min-width: 769px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .page{
         max-width: 768px;
-        overflow-x: hidden;
     }
 }
 
 @media screen and (max-width: 320px) {
     .page{
         max-width: 320px;
-        overflow-x: hidden;
     }
 }
