--- a/web_project_3/blocks/place/__title/place__title.css
+++ b/web_project_3/blocks/place/__title/place__title.css
@@ -5,6 +5,12 @@
     padding: 0;
 }
 
+@media screen and (max-width: 1024px) {
+    .place__title{
+        font-size: 60px;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .place__title{
         font-size: 42px;
