--- a/web_project_3/blocks/place/place.css
+++ b/web_project_3/blocks/place/place.css
@@ -7,11 +7,12 @@
 
 .place {
     display: grid;
-    grid-template-columns: 460px 484px;
+    grid-template-columns: 41% 42%;
     grid-template-rows: fit-content(152px) fit-content(571px);
     grid-gap: 48px 40px;
+    justify-content:center;
     padding: 0;
-    margin: 0 100px;
+    margin: 0;
     width: 100%;
 }
 
@@ -21,14 +22,15 @@
 
 @media screen and (max-width: 1024px) {
     .place{
-        grid-template-columns: 440px 456px;
+        grid-template-columns: 47.5% 49.5%;
         margin: 0;
+        grid-gap: 48px 32px;
     }   
 }
 
 @media screen and (max-width: 768px) {
     .place{
-        grid-template-columns: 340px 352px;
+        grid-template-columns: 47.5% 49.5%;
         grid-gap: 48px 28px;
         margin: 0;
     }
